# omms-central-cpp

./: CMakeLists.txt  README.md  libs.md  main.cpp
libs/: LibInclude.hpp
libs/cpptoml/: CMakeLists.txt
libs/spdlog/: CMakeLists.txt
libs/spdlog/include/spdlog/details/: tcp_client-windows.h  udp_client-windows.h  windows_include.h
libs/spdlog/include/spdlog/sinks/: win_eventlog_sink.h
libs/spdlog/tests/: CMakeLists.txt
src/: CentralServer.cpp  CentralServer.h
src/arg_parser/: ArgParser.cpp  ArgParser.h
src/base/: Object.cpp  Object.h  Thread.hpp
src/command/: CommandDispatcher.hpp
src/console/: ConsoleThread.cpp  ConsoleThread.h
src/logger/: Logger.cpp  Logger.h
src/utils/: GlobalInclude.h  PropertiesSet.cpp  PropertiesSet.h  Utils.cpp  Utils.h
